tests/codegen/fail/unsupported_empty_array_without_expected_build.ql
fn main() -> Int {
    let values = []
    return 0
}
